--- a/main-content.css
+++ b/main-content.css
@@ -107,12 +107,6 @@ html {
     position: fixed;
 } */
 
-header {
-    /* width: calc(100% - 270px); */
-    position: fixed;
-    top: 0;
-    right: 0;
-}
 
 /* .header-container {
     grid-area: navbar;
@@ -271,10 +265,14 @@ header {
 }
 
 .main-info-header {
+  display: flex;
+  align-items: center;
+  gap:.5rem;
+  padding: 16px 24px;
   width: 100%;
   position: sticky;
   top:0;
-  background-color: #6a6a6a;
+  background-color: #10B47E;
   height: 64px;
   z-index: 1;
 }
@@ -392,6 +390,10 @@ header {
 }
 
 .toggle-inner-filter {
+  display: none;
+}
+
+.toggle-inner-header-filter {
   display: none;
 }
 
@@ -714,6 +716,18 @@ header {
 
 .login-btn {
   display: none;
+}
+
+.toggle-inner-header-filter {
+  width: 32px;
+  height: 32px;
+  padding: 0.25rem;
+  display: flex;
+  border-radius: 50%;
+  border: 0 solid #e5e7eb;
+  background-color: #06B6D4;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.89);
+  cursor: pointer;
 }
 
 .sidebar-container {
