--- a/sidebar-deck.css
+++ b/sidebar-deck.css
@@ -126,13 +126,14 @@
 }
 .cash:hover::before {
   font-size: 13px;
-  width: 65px;
-  content: "開啟 價格";
+  width: 70px;
+  content: "開啟價格";
   padding:3px;
   background-color: #121212c3;
   position: absolute;
   bottom:-27px;
   border-radius: 9999px;
+  z-index: 1;
 }
 
 .plus {
@@ -147,6 +148,7 @@
   position: absolute;
   bottom:-27px;
   border-radius: 9999px;
+  z-index: 1;
 }
 
 .minus {
@@ -161,6 +163,7 @@
   position: absolute;
   bottom:-27px;
   border-radius: 9999px;
+  z-index: 1;
 }
 
 .card-content {
